Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignBoolObjNumberWrapped.quorum
class main
    action Main
        Boolean b = 7.5
    end
end